styles.css
body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 0;
}

.header,
.hero-container,
.footer {
    background-color: #1f2937;
}
.header {
    padding: 0px 280px;
    align-items: center;
}

.quote {
    background-color: #e5e7eb;
    display: flex;
    padding: 50px 320px;
    flex-direction: column;
    align-items: end;
}

h1 {
    font-size: 48px;
    color: #f9faf8;
    font-weight: 900;
}

.hero-container {
    padding: 100px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-evenly;
}
.hero-text {
    display: flex;
    flex-direction: column;
    align-items: start;
    width: 475px;
}

.hero-container p,
.right-links {
    font-size: 18px;
    color: #e5e7eb;
}

.header-logo {
    font-size: 24px;
    color: #f9faf8;
    display: flex;
    flex-direction: column;
    align-items: center;
}

button {
    background-color: #3882f6;
    padding: 5px 20px;
    color: #ffffff;
    font-weight: 900;
    border-radius: 10px;
    box-shadow: none;
    border: none;
}

.call button {
    border: 1px solid #ffffff;
    margin-left: 100px;
}

.info h2 {
    font-size: 36px;
    color: #1f2937;
    font-weight: 900;
    display: flex;
    justify-content: center;
}

.info {
    display: flex;
    flex-direction: column;
}

em {
    font-size: 36px;
    color: #1f2937;
    font-weight: 300;
}

.call-container {
    background-color: #3882f6;
    color: #ffffff;
    padding: 20px 50px;
    display: flex;
    align-items: center;
    margin: 50px;
}

.footer {
    color: #f9faf8;
}

.hero-container img {
    height: 150px;
    width: auto;
}

ul {
    list-style-type: none;
    display: flex;
}
li {
    padding-left: 16px;
}
a {
    text-decoration: none;
}

.header {
    display: flex;
    flex-flow: row;
    justify-content: space-between;    
}

.header-logo {
    font-weight: 900;
    padding: 16px;
    display: flex;
    flex-wrap: wrap;
    align-content: center;
}

.right-links {
    padding: 16px;
    display: flex;
    flex-wrap: wrap;
}

.container {
    display: flex;
    flex-direction: column;
}

.info img {
    height: auto;
    width: 150px;
    border: 2px solid #3882f6;
    border-radius: 10px;
}

.call {
    display: flex;
    justify-content: center;
}

.subtext {
    display: flex;
    justify-content: center;
}
.sub-img {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
}
.sub-img p {
    width: 150px;
    text-align: center;
    font-size: 16px;
    padding: 0px 16px;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
}

